# rust2git

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
libgit2-sys/: Cargo.toml  build.rs
libgit2-sys/src/: lib.rs  raw.rs
src/: main.rs
