[package]
name = "libgit2-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.132"
lazy_static = { version = "1.4.0", optional = true }
libloading = { version = "0.7.3", optional = true }
cfg-if = { version = "1.0.0", optional = true }
log = { version = "0.4.17", optional = true }

[build-dependencies]
curl = "0.4.44"
flate2 = "1.0.24"
pkg-config = "0.3.25"
semver = "1.0.13"
tar = "0.4.38"
zip = "0.6.2"